examples/statefully/deploy/app-stateful.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: statefully
---
apiVersion: v1
kind: Service
metadata:
  name: statefully-stateful
  namespace: statefully
spec:
    ports:
        - port: 8080
          targetPort: 8080
          protocol: TCP
    selector:
        app: statefully-stateful
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefully-stateful
  labels:
    app: statefully
  namespace: statefully
spec:
  selector:
    matchLabels:
      app: statefully-stateful
  serviceName: statefully-stateful
  template:
    metadata:
        labels:
            app: statefully-stateful
    spec:
      containers:
        - name: server
          image: quay.io/massigollo/playground:stateful
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
              limits:
                cpu: 100m
                memory: 256Mi
              requests:
                cpu: 50m
                memory: 128Mi
          securityContext:
              allowPrivilegeEscalation: false
          volumeMounts:
            - name: statefully-stateful-volume
              mountPath: /tmp
  volumeClaimTemplates:
    - metadata:
        name: statefully-stateful-volume
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
